--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="/home/bandreotti/Ninja/Ninja-Avocado.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/samuel/Godot/Projetos/Ninja-Avocado.exe"
+export_path="/home/bandreotti/Ninja/Ninja-Avocado.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
